--- a/style.css
+++ b/style.css
@@ -60,8 +60,10 @@ nav {
   cursor: pointer;
 }
 
-/* Mobile styles */
 @media (max-width: 768px) {
+  .logo img {
+    margin-left: 20px;
+  }
   .nav-links {
     display: none;
     flex-direction: column;
@@ -84,6 +86,8 @@ nav {
 
   .hamburger {
     display: block;
+    margin-right: 20px;
+    color: white;
   }
 }
 
