--- a/style.css
+++ b/style.css
@@ -32,12 +32,14 @@ nav {
     height: 50px;
     width: auto;
     vertical-align: middle;
+    margin-left: 30px;
 }
 
 
 .nav-links {
     display: flex;
     gap: 30px;
+    margin-right: 30px;
 }
 
 .nav-links a {
@@ -60,7 +62,7 @@ nav {
   cursor: pointer;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px)  {
   .logo img {
     margin-left: 20px;
   }
@@ -88,6 +90,12 @@ nav {
     display: block;
     margin-right: 20px;
     color: white;
+  }
+
+  .banner img {
+    width: 100%;
+    height: auto;
+
   }
 }
 
